<resources>
    <string name="app_name">ScannerKotlin</string>
    <string name="ScanText">Отсканированные товары</string>
    <string name="mainText">Главное меню</string>
    <string name="scanButton">ИНВЕНТАРИЗАЦИЯ</string>
    <string name="productsButton">ПРИХОД</string>
    <string name="documentBtn">ПЕРЕМЕЩЕНИЕ</string>
    <string name="productsText">Товары</string>
    <string name="dataText">Data</string>
    <string name="symbologyText">symbology</string>
    <string name="productName">Название продукта</string>
    <string name="productId">ID</string>
    <string name="productDescription">Описание</string>
    <string name="productPrice">Цена товара</string>
    <string name="documentComing">Документы прихода</string>
    <string name="documentMoving">Документы перемещения</string>
    <string name="titleDocument">title</string>
    <string name="tvName">Name of Product</string>
    <string name="tvMeasure">products measure</string>
    <string name="tvQuantity">products quantity</string>
    <string name="documentComingType">Документ прихода</string>
    <string name="documentMovingType">Документ перемещения</string>
    <string name="documentNumber">Document number</string>
    <string name="arrivalDate">Дата прихода</string>
    <string name="btnOpenDocument">Открыть</string>
    <string-array name="quantity_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="btnAddProduct">Добавить товар</string>
    <string name="btnSave">Сохранить и провести учет</string>
    <string name="btnMovingSave">Провести</string>
    <string name="quantity">Количество</string>
    <string name="barcode">Штрихкод</string>
    <string name="AddDocumentMoving">Добавить документ</string>
    <string name="Auth">Авторизация</string>
    <string name="logoutButton">ВЫЙТИ</string>
</resources>