<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/topSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/documentMovingType"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tvArrivalNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvArrivalDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/emptyProductMovingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Список товаров пуст"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovingProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topSection"
        android:layout_above="@id/buttonContainer"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnMovingAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:minHeight="48dp"
            android:text="@string/btnAddProduct"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnMovingSave"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:minHeight="48dp"
            android:text="@string/btnMovingSave"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>